# csi_agc

./: CMakeLists.txt  README.md  create_venv.bat  debug_csi_dump.py  monitor_csi.py  monitor_csi_clean.py  requirements.txt  sdkconfig.defaults  send_tx_power.py  true_tx.c
.git-send-backup/: FETCH_HEAD  config  index  packed-refs
.git-send-backup/logs/: HEAD
.git-send-backup/logs/refs/heads/: main
.git-send-backup/logs/refs/remotes/origin/: HEAD  main
.git-send-backup/objects/pack/: pack-50b4e6ff82cc511763023935e7f088b91696ad2b.idx  pack-50b4e6ff82cc511763023935e7f088b91696ad2b.pack  pack-50b4e6ff82cc511763023935e7f088b91696ad2b.rev
.git-send-backup/refs/heads/: main
main/: CMakeLists.txt  idf_component.yml  main.c  main_rx.c  main_tx.c
test/zoefall_rx/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  version.json  version_info.h.in
test/zoefall_rx/cfg/: dev.cfg  dev.cfg.hash  inject.py  menu.Kconfig  prod.cfg  sdkconfig.h  zc_cfg.h
test/zoefall_rx/include/zoecare/rx/: config.h  dapd.h  err.h  fall_validation.h  ota_update.h  svm_params.h  svm_rbf.h  utils.h
test/zoefall_rx/model/: 3098928_0_mask.npy  3098928_0_securite584.joblib  README.md  extract_model.py
test/zoefall_rx/src/: config.c  dapd.c  err.c  fall_validation.c  ota_update.c  rx.c  svm_arrays.c  svm_rbf.c  utils.c
test/zoefall_tx/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  version.json
test/zoefall_tx/cfg/: dev.cfg  dev.cfg.hash  inject.py  menu.Kconfig  prod.cfg  sdkconfig.h  zc_cfg.h
test/zoefall_tx/include/zoecare/tx/: cmd_decl.h  cmd_nvs.h  cmd_router.h  cmd_system.h  config.h  err.h  ota_update.h  tx_cred_switch.h  version_info.h  zoecare_functions.h  zoecare_init.h  zoecare_utils.h
test/zoefall_tx/src/: cmd_nvs.c  cmd_router.c  cmd_system.c  config.c  err.c  http_server.c  ota_update.c  tx.c  tx_cred_switch.c  zoecare_functions.c  zoecare_init.c  zoecare_utils.c
